--- a/uu.html
+++ b/uu.html
@@ -56,5 +56,5 @@ margin:auto;
 </div>
 <p class="link">If you have time, please fill this feedback form!!!! <a href="https://forms.gle/6Jm3G2SHo1XBd7Mt7" target="_blank"><i>feedback form</i></a>.</p>
 </div>
-<p class="link">If you have time, please watch this youtube!!!! <a href="https://youtu.be/tgbNymZ7qY" target="_blank"><i>feedback form</i></a>.</p>
+<p class="link">If you have time, please watch this youtube!!!! <a href="https://youtu.be/tgbNymZ7qY" target="_blank"><i>youtube video</i></a>.</p>
 </div>
