--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <html>
 <head>
-<title>Hardware Name</title>
-<h1>There are so many Hardware</h1>
-<h2>These are as follows:</h2>
+<title>Dr. RAM BALAK BHAGAT</title>
 </head>
-<body bgcolor="green">
-<ul type="circle">
-<li>Name of  the Hardware</li>
-<img class="Project-image" img src="Hard.jpg">
-</ul>
-<ol type="1" start="1">
-<li>Mouse</li>
-<li>Keyboard</li>
-<li>Monitor</li>
-<li>Printer</li>
+<body background="tt.png">
+
+	<ol typer ="a" start="a">
+<li>Dr. R.B Bhagat</li>
+
+<li>a.M.Sc,phd(chemistry)</li>
+<li>b.First Division passsed</li>
+<li>c.Graduated on 1978</li>
 </ol>
-<a href="fd.html">
-<font color="orange" size="25" face="MS Gothic">Please see here!!!</font>
-</img>
-</a>
+<ol >
+<li>Other achievement
+<li>A.Was a teacher at r.p.s residential school,patna</li>
+<li>B.Was a teacher at st.dominic savio's high school,patna</li>
+<li>C.Was worked in central water commission</li>
+<li>D.recently a teacher leed's asian,patna</li>
+</ol>
+
+		<a href="main.html">
+<font color="red" size="30" face="Latin" >Click here go to Home page</font>
+		
+</img> 
+	</a>
+
 </body>
 </html>
