--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Dr. RAM BALAK BHAGAT</title>
 </head>
-<body background="tt.png">
+<body background="tt.PNG CLASS=img-responsive "  alt="pic">
 
 	<ol typer ="a" start="a">
 <li>Dr. R.B Bhagat</li>
